    * check_mkevents outputs last worst line in service output
    * Max. number of queued connections on status sockets is configurable now
    * check_mkevents: new option -a for ignoring acknowledged events
    * New sub-permissions for changing comment and contact while updating an event
    * New button for generating test events directly via WATO

    Multisite:
    * Enable automation login with _username= and _secret=, while
      _secret is the content of var/check_mk/web/$USER/automation.secret
    * FIX: Fixed releasing of locks and livestatus connections when logging out
    * FIX: Fixed login/login confusions with index page caching
    * FIX: Speed-o-meter: Fixed calculation of Check_MK passive check invervals
    * Removed focus of "Full name" attribute on editing a contact
    * Quicksearch: Convert search text to regex when accessing livestatus
    * FIX: WATO Folder filter not available when WATO disabled
    * WATO Folder Filter no longer available in single host views
    * Added new painters "Service check command expanded" and
      "Host check command expanded"
    * FIX: Corrected garbled description for sorter "Service Performance data" 
    * Dashboard globes can now be filtered by host_contact_group/service_contact_group
    * Dashboard "iframe" attribute can now be rendered dynamically using the
      "iframefunc" attribute in the dashlet declaration
    * Dashboard header can now be hidden by setting "title" to None

    Livestatus:
    * Added new table statehist, used for SLA queries
    * Added new column check_command_expanded in table hosts
    * Added new column check_command_expanded in table services
    * New columns livestatus_threads, livestatus_{active,queued}_connections

    BI:
    * Added missing localizations
    * Added option bi_precompile_on_demand to split compilations of
      the aggregations in several fragments. If possible only the needed
      aggregations are compiled to reduce the time a user has to wait for