@@ -531,7 +531,11 @@ class EventServer:
             columns.append(("status_" + name, value))
             columns.append(("status_" + name.rstrip("s") + "_rate", 0.0))
             columns.append(("status_average_" + name.rstrip("s") + "_rate", 0.0))
-        columns.append("status_average_processing_time")
+        columns.append(("status_average_processing_time", 0.0))
+        # Information about replication
+        columns.append(("status_replication_slavemode", ""))
+        columns.append(("status_replication_last_sync", 0.0))
+        columns.append(("status_replication_success", False))
         return columns
 
     def do_statistics(self):
@@ -568,6 +572,17 @@ class EventServer:
             row.append(self._average_rates.get(name, 0.0))
         headers.append("status_average_processing_time")
         row.append(self._average_processing_time)
+
+        # Replication
+        headers += [ "status_replication_slavemode", "status_replication_last_sync", 
+                     "status_replication_success" ]
+        if is_replication_slave():
+            row.append(g_slave_status["mode"])
+            row.append(g_slave_status["last_sync"])
+            row.append(g_slave_status["success"])
+        else:
+            row += [ "master", 0.0, False ]
+
         return headers, [row]
 
     def create_pipe(self):
@@ -1403,6 +1418,7 @@ class StatusServer:
         log("Executing command: %s" % commandline)
         parts = commandline.split(";")
         command = parts[0]
+        replication_allow_command(command)
         arguments = parts[1:]
         if command == "DELETE":
             self.handle_command_delete(arguments)
@@ -1425,6 +1441,8 @@ class StatusServer:
             self.handle_command_changestate(arguments)
         elif command == "ACTION":
             self.handle_command_action(arguments)
+        elif command == "SWITCHMODE":
+            self.handle_command_switchmode(arguments)
         else:
             raise MKClientError("Unknown command %s" % command)
 
@@ -1435,8 +1453,8 @@ class StatusServer:
         g_event_status.delete_event(int(event_id), user)
 
     def handle_command_update(self, arguments):
-        event_id, user, acknowledged, comment, contact = arguments
-        event = g_event_status.event(int(event_id))
+        event_id, user, acknowledged, comment, contact = arguments 
+        event = g_event_status.event(int(event_id)) 
         if not event:
             raise MKClientError("No event with id %s" % event_id)
         if comment:
@@ -1503,6 +1521,18 @@ class StatusServer:
                    "make sure that you activate the changes in the Event Console.") % action_id
             action = g_config["action"][action_id]
         do_rule_action(action, event, user)
+
+    def handle_command_switchmode(self, arguments):
+        new_mode = arguments[0]
+        if not is_replication_slave():
+            raise MKClientError("Cannot switch replication mode: this is not a replication slave.")
+        elif new_mode not in [ "sync", "takeover" ]:
+            raise MKClientError("Invalid target mode '%s': allowed are only 'sync' and 'takeover'" % 
+                new_mode)
+        g_slave_status["mode"] = new_mode
+        save_slave_status()
+        log("Switched replication mode to '%s' by external command." % new_mode)
+
 
     def handle_replicate(self, argument, client_ip):
         # Last time our slave got a config update
@@ -2021,6 +2051,14 @@ def is_replication_slave():
     repl_settings = g_config.get("replication")
     return repl_settings and not repl_settings.get("disabled")
 
+def replication_allow_command(command):
+    if is_replication_slave() and g_slave_status["mode"] == "sync" \
+        and command in [
+            "DELETE", "UPDATE", "CHANGESTATE", "ACTION",
+        ]:
+        raise MKClientError("This command is not allowed on a replication slave "
+           "while it is in sync mode.")
+
 def replication_send(last_update):
     response = {}
     with lock_configuration:
@@ -2058,6 +2096,7 @@ def replication_pull():
                     if repl_settings.get("logging"):
                         log("Successfully synchronized with master")
                     g_slave_status["last_sync"] = now
+                    g_slave_status["success"] = True
 
                     # Fall back to slave mode after successful sync 
                     # (time frame has already been checked)
@@ -2074,6 +2113,7 @@ def replication_pull():
 
                 except Exception, e:
                     log("Replication: cannot sync with master: %s" % e)
+                    g_slave_status["success"] = False
                     if g_slave_status["last_master_down"] == None:
                         g_slave_status["last_master_down"] = now
 
